# sm-ext-discord

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.rust.txt  CMakeLists.txt  README.md  SM-EXT-Discord.sln  SM-EXT-Discord.vcxproj  appveyor.csgo.yml  appveyor.css.yml  appveyor.tf2.yml  appveyor.yml
cpp/: DiscordClient.cpp  DiscordClient.hpp  Extension.cpp  Extension.hpp  glue.cpp  glue.hpp  handletypes.hpp  smn_client.cpp  smn_extension.cpp  smn_message.cpp  smn_newembed.cpp  smn_newmessage.cpp  smn_ready.cpp  smn_user.cpp  work_queue.cpp  work_queue.hpp
cpp/include/: rust.h  smsdk_config.h
rust/: Cargo.toml
rust/src/: client.rs  glue.rs  handler.rs  lib.rs  utils.rs
rust/src/model/: message.rs  mod.rs  ready.rs  sendable.rs  user.rs
scripting/: discord_selftest.sp
scripting/include/: discord.inc
