[package]
name = "discord_extension"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
serenity = "0.5.1"
typemap = "0.3.3"
rayon = "1.0.1"
lazy_static = "1.0.0"

serde = "1.0.43"
serde_json = "1.0.16"
serde_derive = "1.0.43"

[target.'cfg(not(windows))'.dependencies]
openssl-probe = "0.1.2"